Fixing deep vsss title

--- a/deepvsss.html
+++ b/deepvsss.html
@@ -102,7 +102,7 @@
             <div class="container">
               <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade">
-                  <h2 class="section-title mb-3" tkey="deep.title"></h2>
+                  <h2 class="section-title mb-3">Beating Soccer Robots in the Real World by Reinforcement Learning and Sim-to-Real</h2>
                 </div>
                 <h4> 
                   <a href="https://hfbassani.github.io/" target="_blank"> H. F. Bassani </a>, 
