--- a/membros.html
+++ b/membros.html
@@ -58,7 +58,7 @@
             <div class="row align-items-center">
               
               <div class="col-6 col-xl-2">
-              <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img id="logo" src="./images/robocin-04.png" height="75px" width="245px"><span class="img-primary"></span> </a></h1>
+              <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/robocin-04.png" height="75px" width="245px"><span class="img-primary"></span> </a></h1>
               </div>
     
               <div class="col-12 col-md-10 d-none d-xl-block">
