--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                   </button>
                   
                   <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                    <a class="dropdown-item" id="pt" >Português</a>
-                    <a class="dropdown-item" id="en" >English</a>
+                    <a onclick="setPT()" class="dropdown-item" id="pt" >Português</a>
+                    <a onclick="setEN()" class="dropdown-item" id="en" >English</a>
                   </div>
                 </div>
               </ul>
