--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   
      
-    <div id="image_background" class="site-blocks-cover overlay" style="background-image: url(images/capa.jpg);" data-aos="fade" id="home-section">
+    <div class="site-blocks-cover overlay" style="background-image: url(images/capa.jpg);" data-aos="fade" id="home-section">
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
