Adding results IronCup2020

--- a/seguidordelinha.html
+++ b/seguidordelinha.html
@@ -133,6 +133,7 @@
             <p class="text-justify" tkey="s.desc"></p>
             <br>
             <p class="res" tkey="cat.ln.r"></p>
+            <p class="text-justify" tkey="cat.ln.results"></p>
 
           </div>
           <div class="col-md-4 sidebar">
