--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -138,6 +138,7 @@
             <p class="text-justify" tkey="cat.vss.desc2"></p>
             <br>
             <p class="res" tkey="cat.vss.r"></p>
+            <p class="text-justify" tkey="cat.vss.results"></p>
             <p class="text-justify" tkey="cat.vss.results1"></p>
             <p class="text-justify" tkey="cat.vss.results2"></p>
             <p class="text-justify" tkey="cat.vss.results3"></p>
