Changing bg to a gray hue to discern from top bar

--- a/membros.html
+++ b/membros.html
@@ -102,7 +102,7 @@
         </header>
 
 
-    <section class="site-section border-bottom" id="team-section">
+    <section class="site-section border-bottom bg-light" id="team-section">
         <div class="container">
             <div class="row mb-5 justify-content-center">
                 <div class="col-md-8 text-center">
