--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </a>
     </div>  
 
-    <div class="site-section" id="next">
+    <div class="site-section bg-light" id="next">
       <div class="container">
         <div class="row mb-5">
     <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="">
@@ -192,7 +192,7 @@
       </div>  
     </div>
 
-    <section class="site-section">
+    <section class="site-section bg-light">
       <div class="container">
 
         <div class="row mb-5 justify-content-center">
