Adding email at contact page

--- a/contato.html
+++ b/contato.html
@@ -113,6 +113,7 @@
             </div>
 
               <div class="container text-center">
+                <h3 id="email">robocin@cin.ufpe.br</h3>
                 <div class="row mb-6 text-center mb-0">
                   <div class="col-md-12">
                     <a target="blank" href="https://pt-br.facebook.com/robocin/"><span class="icon-facebook d-block h2 text-secondary"></span></a>
