Remove old projects from join us

--- a/seletiva.html
+++ b/seletiva.html
@@ -113,17 +113,18 @@
                   <div class="pricing">
                     <h3 class="text-center text-black"></h3>
                     <div class="price text-center mb-4 ">
-                      <span><span>Software</span>/ 2019</span>
+                      <span><span>Software</span>/ 2020</span>
                     </div>
+                    <!-- 
                     <ul class="list-unstyled ul-check success mb-5">
                       
                       <li><a target="blank" href="./seletiva/seletiva2019software.pdf">Software</a></li>
                       <li><a target="blank" href="./seletiva/eletiva2019simulacao2d.pdf">2D</a></li>
-                      <!-- <li class="remove">Lorem ipsum dolor sit amet</li>
+                      <li class="remove">Lorem ipsum dolor sit amet</li>
                       <li class="remove">Consectetur adipisicing elit</li>
-                      <li class="remove">Dolorum esse odio quas architecto sint</li> -->
+                      <li class="remove">Dolorum esse odio quas architecto sint</li>
                     </ul>
-                    <!-- <p class="text-center">
+                    <p class="text-center">
                       <a href="#" id="soft" class="btn btn-primary" tkey="pdf"></a>
                     </p> -->
                   </div>
@@ -133,12 +134,13 @@
                   <div class="pricing">
                     <h3 class="text-center text-black"></h3>
                     <div class="price text-center mb-4 ">
-                      <span><span tkey="eletronics"></span>/ 2019</span>
+                      <span><span tkey="eletronics"></span>/ 2020</span>
                     </div>
+                    <!-- 
                     <ul class="list-unstyled ul-check success mb-5">
                       <li><a target="blank" href="./seletiva/seletiva2019eletronica.pdf" tkey="p.eletronics.2019"></a></li>
                     </ul>
-                    <!-- <p class="text-center">
+                    <p class="text-center">
                       <a target="blank"  class="btn btn-primary" tkey="pdf"></a>
                     </p> -->
                   </div>
@@ -148,12 +150,13 @@
                   <div class="pricing">
                     <h3 class="text-center text-black"></h3>
                     <div class="price text-center mb-4 ">
-                      <span><span tkey="mechanics"></span> / 2019</span>
+                      <span><span tkey="mechanics"></span> / 2020</span>
                     </div>
+                    <!-- 
                     <ul class="list-unstyled ul-check success mb-5">
                       <li><a target="blank" href="./seletiva/seletiva2019mecanica.pdf" tkey="p.mechanics.2019"></a></li>
                     </ul>
-                    <!-- <p class="text-center">
+                    <p class="text-center">
                       <a target="blank" href="./seletiva/seletiva2019mecanica.pdf" class="btn btn-primary" tkey="pdf"></a>
                     </p> -->
                   </div>
@@ -163,12 +166,13 @@
                   <div class="pricing">
                     <h3 class="text-center text-black"></h3>
                     <div class="price text-center mb-4 ">
-                      <span><span tkey="es"></span>/ 2019</span>
+                      <span><span tkey="es"></span>/ 2020</span>
                     </div>
+                    <!--
                     <ul class="list-unstyled ul-check success mb-5">
                       <li><a target="blank" href="./seletiva/seletiva2019embarcados.pdf" tkey="p.es.2019"></a></li>
                     </ul>
-                    <!-- <p class="text-center">
+                    <p class="text-center">
                       <a target="blank" href="./seletiva/seletiva2019embarcados.pdf" class="btn btn-primary" tkey="pdf"></a>
                     </p> -->
                   </div>
