lang(pt/en): add LARC 2020 results

--- a/simulacao2d.html
+++ b/simulacao2d.html
@@ -133,6 +133,7 @@
             <p class="text-justify" tkey="cat.2d.desc"></p>
             <br>
             <p class="res" tkey="cat.2d.r"></p>
+            <p class="text-justify" tkey="cat.2d.results0"></p>
             <p class="text-justify" tkey="cat.2d.results"></p>
             <p class="text-justify" tkey="cat.2d.results1"></p>
             <p class="text-justify" tkey="cat.2d.results2"></p>
