--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -134,6 +134,7 @@
             <p class="text-justify" tkey="cat.ssl.desc"></p>
             <br>
             <p class="res" tkey="cat.ssl.r"></p>
+            <p class="text-justify" tkey="cat.ssl.results0"></p>
             <p class="text-justify" tkey="cat.ssl.results1"></p>
             <p class="text-justify" tkey="cat.ssl.results2"></p>
             <p class="text-justify" tkey="cat.ssl.results3"></p>
