--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -134,7 +134,7 @@
             <p class="text-justify" tkey="cat.ssl.desc"></p>
             <br>
             <p class="res" tkey="cat.ssl.r"></p>
-            <a class="badge badge-warning" tkey="cat.ssl.champion"></a>
+            <a class="badge badge-warning" id="ssl-text" tkey="cat.ssl.results.champion"></a>
             <p class="text-justify" tkey="cat.ssl.results0"></p>
             <p class="text-justify" tkey="cat.ssl.results1"></p>
             <p class="text-justify" tkey="cat.ssl.results2"></p>
