--- a/seletiva.html
+++ b/seletiva.html
@@ -118,7 +118,7 @@
             <div class="container">
 
               <div class="col-12 text-center" data-aos="fade-up">
-                <h2 class="section-title mb-3">Informações</h2>
+                <h2 class="section-title mb-3" id="info">Informações</h2>
               </div>
 
               <div class="row mb-5 justify-content-between">
