refactor(seletiva.html): add forms link

--- a/seletiva.html
+++ b/seletiva.html
@@ -110,8 +110,8 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
-              <p class="lead">O link para o nosso formulário será disponibilizado em breve, aguenta aí!</p>
-              <a class="btn btn-primary" href="#" role="button">Formulário</a>
+              <p class="lead">Corre lá! Você pode se inscrever até o dia 30/11. Não vai perder, hein?!</p>
+              <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScXyY4HvBJVW0YxKKjfqalpvIfzNUjUqpOuUO24VIyvaJIX_g/viewform" role="button" target="_blank">Formulário</a>
             </div>
           </div>
 
