--- a/seletiva.html
+++ b/seletiva.html
@@ -110,7 +110,7 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
-              <p class="lead">Corre lá! Você pode se inscrever até o dia 30/11. Não vai perder, hein?!</p>
+              <p class="lead">Corre lá! Você pode se inscrever até o dia 02/11. Não vai perder, hein?!</p>
               <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScXyY4HvBJVW0YxKKjfqalpvIfzNUjUqpOuUO24VIyvaJIX_g/viewform" role="button" target="_blank">Formulário</a>
             </div>
           </div>
@@ -152,7 +152,8 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Início das entrevistas
-                      <span class="badge badge-primary badge-pill">01/12</span>
+                      <span class="badge badge-primary badge-pill"><s>01/12</s></span>
+                      <span class="badge badge-primary badge-pill">03/12</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Fim das entrevistas
@@ -160,7 +161,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Resultados das entrevistas
-                      <span class="badge badge-primary badge-pill">07/12</span>
+                      <span class="badge badge-primary badge-pill">06/12</span>
                     </li>
                   </ul>
                 </div>
@@ -169,7 +170,7 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Descrição dos projetos
-                      <span class="badge badge-primary badge-pill">07/12</span>
+                      <span class="badge badge-primary badge-pill">06/12</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Acompanhamento parcial dos projetos
