--- a/seletiva.html
+++ b/seletiva.html
@@ -110,8 +110,8 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
-              <p class="lead">Corre lá! Você pode se inscrever até o dia 02/12. Não vai perder, hein?!</p>
-              <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScXyY4HvBJVW0YxKKjfqalpvIfzNUjUqpOuUO24VIyvaJIX_g/viewform" role="button" target="_blank">Formulário</a>
+              <p class="lead">O período de inscrições encerrado! Mas não fique triste, no futuro abriremos novamente! :)</p>
+              <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLScXyY4HvBJVW0YxKKjfqalpvIfzNUjUqpOuUO24VIyvaJIX_g/viewform" role="button" target="_blank">Formulário</a>
             </div>
           </div>
 
@@ -170,7 +170,7 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Descrição dos projetos
-                      <span class="badge badge-primary badge-pill">06/12</span>
+                      <span class="badge badge-primary badge-pill">07/12</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Acompanhamento parcial dos projetos
