fix(seletiva.html): correct text

--- a/seletiva.html
+++ b/seletiva.html
@@ -110,7 +110,7 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
-              <p class="lead">O período de inscrições encerrado! Mas não fique triste, no futuro abriremos novamente! :)</p>
+              <p class="lead">O período de inscrições está encerrado! Mas não fique triste, no futuro abriremos novamente! :)</p>
               <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLScXyY4HvBJVW0YxKKjfqalpvIfzNUjUqpOuUO24VIyvaJIX_g/viewform" role="button" target="_blank">Formulário</a>
             </div>
           </div>
