chore(seletiva.html): change projects button behavior

--- a/seletiva.html
+++ b/seletiva.html
@@ -199,7 +199,7 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em modelagem tridimensional de partes dos nossos robôs.</p>
-                        <a href="#" class="btn btn-secondary">Ver projeto</a>
+                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                       </div>
                     </div>
                   </div>
@@ -212,7 +212,7 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco no desenvolvimento com o Hardware e Software.</p>
-                        <a href="#" class="btn btn-secondary">Ver projeto</a>
+                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                       </div>
                     </div>
                   </div>
@@ -229,7 +229,7 @@
                           <span class="badge badge-primary">2D</span>
                         </h5>
                         <p class="card-text">Foco nos comportamentos dos nossos robôs ou construção de análises de jogos existentes.</p>
-                        <a href="#" class="btn btn-secondary">Ver projeto</a>
+                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                       </div>
                     </div>
                   </div>
@@ -242,7 +242,7 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em circuitos e controladores de motor.</p>
-                        <a href="#" class="btn btn-secondary">Ver projeto</a>
+                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                       </div>
                     </div>
                   </div>
