update(seletiva.html): projects available and button style

--- a/seletiva.html
+++ b/seletiva.html
@@ -199,7 +199,9 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em modelagem tridimensional de partes dos nossos robôs.</p>
-                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
+                        <a href="./ps/robocin-mecanica.pdf" download>
+                          <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -212,7 +214,9 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco no desenvolvimento com o Hardware e Software.</p>
-                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
+                        <a href="./ps/robocin-embarcados.pdf" download>
+                          <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -229,7 +233,16 @@
                           <span class="badge badge-primary">2D</span>
                         </h5>
                         <p class="card-text">Foco nos comportamentos dos nossos robôs ou construção de análises de jogos existentes.</p>
-                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
+                        <div class="dropdown show">
+                          <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Ver projetos
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="./ps/robocin-2d.pdf" download>Simulação 2D</a>
+                            <a class="dropdown-item" href="./ps/robocin-software.pdf" download>Software SSL</a>
+                            <a class="dropdown-item" href="./ps/robocin-soft-vss.pdf" download>Software VSS</a>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -242,7 +255,9 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em circuitos e controladores de motor.</p>
-                        <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
+                        <a href="./ps/robocin-eletronica.pdf" download>
+                          <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
+                        </a>
                       </div>
                     </div>
                   </div>
