update(seletiva.html): update projects description

--- a/seletiva.html
+++ b/seletiva.html
@@ -187,7 +187,7 @@
               <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade-up">
                   <h2 class="section-title mb-3" tkey="projects"></h2>
-                  <h5 class="text-center">Os projetos serão disponibilizados no dia 07/12.</h5>
+                  <h5 class="text-center">Projetos divulgados.</h5>
                 </div>
               </div>
                 <div class="row">
