--- a/seletiva.html
+++ b/seletiva.html
@@ -255,7 +255,7 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em circuitos e controladores de motor.</p>
-                        <a href="./ps/robocin-eletronica.pdf" download>
+                        <a href="./ps/Seletiva 2020 - Eletrônica.pdf" download>
                           <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
                         </a>
                       </div>
