fix: correct 2d project links

--- a/seletiva.html
+++ b/seletiva.html
@@ -238,7 +238,7 @@
                             Ver projetos
                           </a>
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="./ps/robocin-2d.pdf" download>Simulação 2D</a>
+                            <a class="dropdown-item" href="./ps/Seletiva 2020 - Simulação 2D.pdf" download>Simulação 2D</a>
                             <a class="dropdown-item" href="./ps/robocin-software.pdf" download>Software SSL</a>
                             <a class="dropdown-item" href="./ps/robocin-soft-vss.pdf" download>Software VSS</a>
                           </div>
