style(seletiva.html): disable buttons

--- a/seletiva.html
+++ b/seletiva.html
@@ -199,8 +199,8 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em modelagem tridimensional de partes dos nossos robôs.</p>
-                        <a href="./ps/robocin-mecanica.pdf" download>
-                          <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
+                        <a href="#">
+                          <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                         </a>
                       </div>
                     </div>
@@ -214,8 +214,8 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco no desenvolvimento com o Hardware e Software.</p>
-                        <a href="./ps/robocin-embarcados.pdf" download>
-                          <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
+                        <a href="#">
+                          <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                         </a>
                       </div>
                     </div>
@@ -234,14 +234,9 @@
                         </h5>
                         <p class="card-text">Foco nos comportamentos dos nossos robôs ou construção de análises de jogos existentes.</p>
                         <div class="dropdown show">
-                          <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Ver projetos
+                          <a href="#">
+                            <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                           </a>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="./ps/Seletiva 2020 - Simulação 2D.pdf" download>Simulação 2D</a>
-                            <a class="dropdown-item" href="./ps/Seletiva 2020 - Software.pdf" download>Software SSL</a>
-                            <a class="dropdown-item" href="./ps/robocin-soft-vss.pdf" download>Software VSS</a>
-                          </div>
                         </div>
                       </div>
                     </div>
@@ -255,8 +250,8 @@
                           <span class="badge badge-primary">VSSS</span>
                         </h5>
                         <p class="card-text">Foco em circuitos e controladores de motor.</p>
-                        <a href="./ps/Seletiva 2020 - Eletrônica.pdf" download>
-                          <button type="button" class="btn btn-primary btn-lg">Ver projeto</button>
+                        <a href="#">
+                          <button type="button" class="btn btn-secondary btn-lg" disabled>Ver projeto</button>
                         </a>
                       </div>
                     </div>
