--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="./index.html" class="nav-link" id="home" tkey="home"></a></li>
-                <li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" id="store" tkey="store"></a></li>
+                <!--<li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" id="store" tkey="store"></a></li>-->
                 <li class="has-children">
                     <a tkey="categ"></a>
                     <ul class="dropdown">
