fix(store link): hide store link from all pages

--- a/membros.html
+++ b/membros.html
@@ -65,7 +65,7 @@
                 <nav class="site-navigation position-relative text-center" role="navigation">
                   <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                     <li><a href="./index.html" class="nav-link" tkey="home">Início</a></li>
-                    <li><a target="blank" tkey="store" href="https://robocin.lojaintegrada.com.br/" class="nav-link">Loja</a></li>
+                    <!--<li><a target="blank" tkey="store" href="https://robocin.lojaintegrada.com.br/" class="nav-link">Loja</a></li>-->
                     <li class="has-children">
                       <a tkey="categ"></a>
                       <ul class="dropdown">
