--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -63,7 +63,7 @@
             <nav class="site-navigation position-relative text-center" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="./index.html" class="nav-link" tkey="home"></a></li>
-                <li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" tkey="store"></a></li>
+                <!--<li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" tkey="store"></a></li>-->
                 <li class="has-children">
                     <a href="#" tkey="categ"></a>
                     <ul class="dropdown">
