--- a/deepvsss.html
+++ b/deepvsss.html
@@ -62,7 +62,7 @@
                 <nav class="site-navigation position-relative text-center" role="navigation">
                   <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                     <li><a href="./index.html" class="nav-link" tkey="home"></a></li>
-                    <li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" tkey="store">Loja</a></li>
+                    <!--<li><a target="blank" href="https://robocin.lojaintegrada.com.br/" class="nav-link" tkey="store">Loja</a></li>-->
                     <li class="has-children">
                       <a tkey="categ"></a>
                       <ul class="dropdown">
