chore(seletiva_2020): hide seletica_2020 projects and informations

--- a/seletiva.html
+++ b/seletiva.html
@@ -99,7 +99,7 @@
           </div>
         </header>
         
-        <section class="site-section bg-light" id="pricing-section">
+        <!--<section class="site-section bg-light" id="pricing-section">
 
           <div class="jumbotron bg-light" id="j-landing">
             <h1 class="display-2" id="landing-intro">Bem-vindos à seletiva RobôCIn 2020!</h1>
@@ -312,7 +312,7 @@
               
 
             </div>
-        </section>
+        </section>-->
 
           <footer class="site-footer">
             <div class="container text-center">
