--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   </li>
                 <li><a href="./membros.html" class="nav-link" id="members" tkey="members"></a></li>
                 <li><a href="./publicacoes.html" class="nav-link" id="papers" tkey="papers"></a></li>
-                <li><a href="./seletiva.html" class="nav-link" id="sel" tkey="join-us"></a></li>
+                <!--<li><a href="./seletiva.html" class="nav-link" id="sel" tkey="join-us"></a></li>-->
                 <li><a href="./contato.html" class="nav-link" id="contact" tkey="contact"></a></li>
                 <div class="btn-group" role="group">
                   <button id="btnGroupDrop1" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tkey="lang">
@@ -222,7 +222,7 @@
                 <h2 class="section-title mb-3" tkey="s"></h2>
                 <p tkey="s.text"></p>
 
-                <p><a href="./seletiva.html" tkey="s.button" class="btn btn-primary mr-2 mb-2"></a></p>
+                <!--<p><a href="./seletiva.html" tkey="s.button" class="btn btn-primary mr-2 mb-2"></a></p>-->
               </div>
               <div>
                 <h2 class="section-title mb-3" tkey="c"></h2>
