fix(): update to seletiva 2021

--- a/seletiva.html
+++ b/seletiva.html
@@ -99,21 +99,22 @@
           </div>
         </header>
         
-        <!--<section class="site-section bg-light" id="pricing-section">
+        <section class="site-section bg-light" id="pricing-section">
 
           <div class="jumbotron bg-light" id="j-landing">
-            <h1 class="display-2" id="landing-intro">Bem-vindos à seletiva RobôCIn 2020!</h1>
-            <p class="lead" id="landing-description">O processo seletivo este ano será 100% on-line. Haverão apresentações das equipes pela plataforma do Google Meet durante a semana das inscrições. 
-              Após isso, haverão as entrevistas com os candidados que aplicaram e posteriormente a fase final dos projetos irá começar!
+            <h1 class="display-2" id="landing-intro">Bem-vindos à seletiva RobôCIn 2021!</h1>
+            <p class="lead" id="landing-description">O processo seletivo este ano será 100% on-line. Haverão apresentações das equipes pela plataforma do Google Meet durante a semana das inscrições.  
+              Após isso, serão liberados os projetos no site e os inscritos no processo seletivo receberam link para do Classroom para acompanhamento durante esta etapa e posteriormente deverão realizar um apresentação do projeto desenvolvido, finalizando assim o processo seletivo.
             </p>
           </div> 
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
-              <p class="lead">O período de inscrições está encerrado! Mas não fique triste, no futuro abriremos novamente! :)</p>
-              <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLScXyY4HvBJVW0YxKKjfqalpvIfzNUjUqpOuUO24VIyvaJIX_g/viewform" role="button" target="_blank">Formulário</a>
+              <p class="lead">O período de inscrições está aberto! :)</p>
+              <a class="btn btn-secondary" href="forms.gle/XfCU95mUbsXeXm2y5" role="button" target="_blank">Formulário</a>
+              <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Edital</a>
             </div>
-          </div>
+          </div><!--
 
             <div class="container">
 
