fix(): update forms link

--- a/seletiva.html
+++ b/seletiva.html
@@ -94,9 +94,9 @@
               
             </div>
           </div>
-          <div class="sel-warn text-center">
+          <!--<div class="sel-warn text-center">
             <p tkey="join_open"></p>
-          </div>
+          </div>-->
         </header>
         
         <section class="site-section bg-light" id="pricing-section">
@@ -111,7 +111,7 @@
             <div class="container">
               <h1 class="display-4">Inscreva-se!</h1>
               <p class="lead">O período de inscrições está aberto! :)</p>
-              <a class="btn btn-secondary" href="forms.gle/XfCU95mUbsXeXm2y5" role="button" target="_blank">Formulário</a>
+              <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSdLTr7kfFpU9v5JkwcsdssGh-zOGgWlhy0XSyt9l4v_YKsg2g/viewform" role="button" target="_blank">Formulário</a>
               <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Edital</a>
             </div>
           </div><!--
