--- a/seletiva.html
+++ b/seletiva.html
@@ -114,7 +114,7 @@
               <a class="btn btn-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSdLTr7kfFpU9v5JkwcsdssGh-zOGgWlhy0XSyt9l4v_YKsg2g/viewform" role="button" target="_blank">Formulário</a>
               <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Edital</a>
             </div>
-          </div><!--
+          </div>
 
             <div class="container">
 
@@ -127,45 +127,32 @@
                   <h3 class="text-center" id="info-title">Apresentações</h3>
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Apresentação geral e Seguidor
-                      <span class="badge badge-primary badge-pill">23/11</span>
+                      Apresentação geral, Subequipes e SSL
+                      <span class="badge badge-primary badge-pill">08/12</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      VSSS
-                      <span class="badge badge-primary badge-pill">24/11</span>
+                      VSSS e RL
+                      <span class="badge badge-primary badge-pill">09/12</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       2D e Analisador
-                      <span class="badge badge-primary badge-pill">25/11</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      SSL
-                      <span class="badge badge-primary badge-pill">26/11</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Subequipes
-                      <span class="badge badge-primary badge-pill">27/11</span>
+                      <span class="badge badge-primary badge-pill">10/12</span>
                     </li>
                   </ul>
                 </div>
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                   <h3 class="text-center" id="info-title">Entrevistas</h3>
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Início das entrevistas
                       <span class="badge badge-primary badge-pill"><s>01/12</s></span>
-                      <span class="badge badge-primary badge-pill">03/12</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Fim das entrevistas
-                      <span class="badge badge-primary badge-pill">04/12</span>
-                    </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Resultados das entrevistas
                       <span class="badge badge-primary badge-pill">06/12</span>
                     </li>
                   </ul>
                 </div>
+                
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
                   <ul class="list-group">
