fix(): add link of meetups

--- a/seletiva.html
+++ b/seletiva.html
@@ -128,9 +128,9 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Apresentação geral, Subequipes e SSL
-                      <span class="badge badge-primary badge-pill">08/12</span>
+                      <span class="badge badge-primary badge-pill" href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing">08/12</span>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <li class="list-group-item d-flex justify-content-between align-items-center" href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing ">
                       VSSS e RL
                       <span class="badge badge-primary badge-pill">09/12</span>
                     </li>
@@ -140,19 +140,27 @@
                     </li>
                   </ul>
                 </div>
-                <!--<div class="col-md-4">
-                  <h3 class="text-center" id="info-title">Entrevistas</h3>
+                <div class="col-md-4">
+                  <h3 class="text-center" id="info-title">Projeto</h3>
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Início das entrevistas
-                      <span class="badge badge-primary badge-pill"><s>01/12</s></span>
+                      Descrição dos projetos
+                      <span class="badge badge-primary badge-pill"><s>03/01</s></span>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Resultados das entrevistas
-                      <span class="badge badge-primary badge-pill">06/12</span>
+                      Acompanhamento parcial dos projetos
+                      <span class="badge badge-primary badge-pill">12/01 e 19/01</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Apresentação dos projetos
+                      <span class="badge badge-primary badge-pill">28/01</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Resultado final
+                      <span class="badge badge-primary badge-pill">31/01</span>
                     </li>
                   </ul>
                 </div>
-                
+                <!--
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
                   <ul class="list-group">
