--- a/seletiva.html
+++ b/seletiva.html
@@ -128,9 +128,9 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Apresentação geral, Subequipes e SSL
-                      <span class="badge badge-primary badge-pill" href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing">08/12</span>
+                      <span class="badge badge-primary badge-pill" href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing" role="button" target="_blank">08/12</span>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center" href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing ">
+                    <li class="list-group-item d-flex justify-content-between align-items-center" href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing " role="button" target="_blank">
                       VSSS e RL
                       <span class="badge badge-primary badge-pill">09/12</span>
                     </li>
@@ -160,6 +160,8 @@
                     </li>
                   </ul>
                 </div>
+              </div>
+            </div>
                 <!--
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
@@ -178,7 +180,6 @@
                     </li>
                   </ul>
                 </div>
-              </div>
 
               <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade-up">
