--- a/seletiva.html
+++ b/seletiva.html
@@ -128,11 +128,13 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Apresentação geral, Subequipes e SSL
-                      <span class="badge badge-primary badge-pill" href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing" role="button" target="_blank">08/12</span>
+                      <span class="badge badge-primary badge-pill">08/12</span>
+                      <a class="btn btn-secondary" href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing" role="button" target="_blank">Acessar</a>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center" href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing " role="button" target="_blank">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
                       VSSS e RL
                       <span class="badge badge-primary badge-pill">09/12</span>
+                      <a class="btn btn-secondary" href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing " role="button" target="_blank">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       2D e Analisador
@@ -145,7 +147,7 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Descrição dos projetos
-                      <span class="badge badge-primary badge-pill"><s>03/01</s></span>
+                      <span class="badge badge-primary badge-pill">03/01</span>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Acompanhamento parcial dos projetos
                       <span class="badge badge-primary badge-pill">12/01 e 19/01</span>
