--- a/seletiva.html
+++ b/seletiva.html
@@ -129,12 +129,12 @@
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Apresentação geral, Subequipes e SSL
                       <span class="badge badge-primary badge-pill">08/12</span>
-                      <a class="btn btn-secondary" href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing" role="button" target="_blank">Acessar</a>
+                      <a href="https://drive.google.com/file/d/1-5OE6kgxSgHx0Kg2dk7zquAcZhk6ZT5j/view?usp=sharing" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      VSSS e RL
+                      VSSS e RL 
                       <span class="badge badge-primary badge-pill">09/12</span>
-                      <a class="btn btn-secondary" href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing " role="button" target="_blank">Acessar</a>
+                      <a href="https://drive.google.com/file/d/18tTW8PcWXB3RSCY7-d6my1g6Fs-dbftZ/view?usp=sharing" class="nav-link">Acessar</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       2D e Analisador
