resultados: atualização dos resultados da larc 2021

--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -135,6 +135,7 @@
             <br>
             <p class="res" tkey="cat.ssl.r"></p>
             <a class="badge badge-warning" id="ssl-text" tkey="cat.ssl.results.champion"></a>
+            <p class="text-justify" tkey="cat.ssl.results"></p>
             <p class="text-justify" tkey="cat.ssl.results0"></p>
             <p class="text-justify" tkey="cat.ssl.results1"></p>
             <p class="text-justify" tkey="cat.ssl.results2"></p>
