2d : acrescentando resultados da robocup e ironcup 2021

--- a/simulacao2d.html
+++ b/simulacao2d.html
@@ -141,6 +141,8 @@
             <p class="text-justify" tkey="cat.2d.results3"></p>
             <p class="text-justify" tkey="cat.2d.results4"></p>
             <p class="text-justify" tkey="cat.2d.results5"></p>
+            <p class="text-justify" tkey="cat.2d.results6"></p>
+            <p class="text-justify" tkey="cat.2d.results7"></p>
 
           </div>
           <div class="col-md-4 sidebar">
