alteracao nos banners e patrocinadores na home; premiacoes nas pages de VSS e SSL;

--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -139,6 +139,7 @@
             <br>
             <p class="res" tkey="cat.vss.r"></p>
             <p class="text-justify" tkey="cat.vss.results"></p>
+            <p class="text-justify" tkey="cat.vss.results8"></p>
             <p class="text-justify" tkey="cat.vss.results0"></p>
             <p class="text-justify" tkey="cat.vss.results1"></p>
             <p class="text-justify" tkey="cat.vss.results2"></p>
