fix: center cin logo and typo

--- a/publicacoes.html
+++ b/publicacoes.html
@@ -121,72 +121,14 @@
             <h2 id="footer-title" class="section-title mb-3" tkey="pat"></h2>
           </div>
         </div>
-        <div class="row align-items-stretch">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="altium-img" src="./images/altium.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="hsbs-img" src="images/hsbs.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="informa-img" src="images/informa.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
 
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="inloco-img" src="images/inloco.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
+        <div class="row mb-5">
+          <div class="unit-4">
+            <div class="unit-4-icon text-center">
+              <img id="cin-img" src="images/cin.png" class="img-fluid md-4" width="20%">
+            </div>  
           </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="maxon-img" src="images/maxon.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="neurotech-img" src="images/neurotech.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="lierre-img" src="images/lierre.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="ci-img" src="images/ci.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="cin-img" src="images/cin.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-            </div>
-          </div>
+        </div>
 
         </div>
         <div class="row pt-5 mt-5 text-center">
