--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                       <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li>
                       <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="cat.ssl"></a></li>
                       <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="cat.vss"></a></li>
+                      <li><a class="nav-link" id="vss" href="./deepvsss.html" tkey="cat.dvss"></a></li>
                       <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
                     </ul>
                   </li>
@@ -258,11 +259,11 @@
         </div>
         <div class="row align-items-stretch">
           
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="row mb-5">
             <div class="unit-4">
-              <div class="unit-4-icon">
-                <img id="cin-img" src="images/cin.png" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
+              <div class="unit-4-icon text-center">
+                <img id="cin-img" src="images/cin.png" class="img-fluid md-4" width="20%">
+              </div>  
             </div>
           </div>
           
