feat(catgories): add results table --needs revision

--- a/seguidordelinha.html
+++ b/seguidordelinha.html
@@ -133,7 +133,21 @@
             <p class="text-justify" tkey="s.desc"></p>
             <br>
             <p class="res" tkey="cat.ln.r"></p>
-            <p class="text-justify" tkey="cat.ln.results"></p>
+            <table class="table">
+              <thead class="bg-primary">
+                <tr>
+                  <th scope="col">Competition</th>
+                  <th scope="col">2020</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">IRONCup</th>
+                  <td tkey="cat.ln.results"></td>
+                </tr>
+                <tr>
+              </tbody>
+            </table>
 
           </div>
           <div class="col-md-4 sidebar">
