--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -133,16 +133,8 @@
 
             <p class="text-justify" tkey="cat.ssl.desc"></p>
             <br>
-            <p class="res" tkey="cat.ssl.r"></p>
-            <a class="badge badge-warning" id="ssl-text" tkey="cat.ssl.results.champion"></a>
-            <p class="text-justify" tkey="cat.ssl.results"></p>
-            <p class="text-justify" tkey="cat.ssl.results4"></p>
-            <p class="text-justify" tkey="cat.ssl.results0"></p>
-            <p class="text-justify" tkey="cat.ssl.results1"></p>
-            <p class="text-justify" tkey="cat.ssl.results2"></p>
-            <p class="text-justify" tkey="cat.ssl.results3"></p>
-
           </div>
+
           <div class="col-md-4 sid29,8 kB (ebar">
             <div class="sidebar-box">
               <div class="categories">
@@ -153,11 +145,40 @@
               </div>
             </div>
           </div>
+
+          <p class="res" tkey="cat.ssl.r"></p>
+          <table class="table">
+            <thead class="bg-primary">
+              <tr>
+                <th scope="col">Competition</th>
+                <th scope="col">2021</th>
+                <th scope="col">2020</th>
+                <th scope="col">2019</th>
+                <th scope="col">2018</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">RoboCup</th>
+                <td tkey="cat.ssl.robocup21"></td>
+                <td tkey="cat.ssl.robocup20"></td>
+                <td tkey="cat.ssl.robocup19"></td>
+                <td tkey="cat.ssl.robocup18"></td>
+              </tr>
+              <tr>
+                <th scope="row">LARC</th>
+                <td><span class="badge badge-pill badge-warning" tkey="cat.ssl.larc21"></span></td>
+                <td><span class="badge badge-pill badge-warning" tkey="cat.ssl.larc20"></span></td>
+                <td tkey="cat.ssl.larc19"></td>
+                <td tkey="cat.ssl.larc18"></td>
+              </tr>
+            </tbody>
+          </table>
+
         </div>
       </div>
     </section>
 
-    
     <footer class="site-footer">
       <div class="container text-center">
         <div class="row mb-5">
