--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -138,6 +138,42 @@
             <p class="text-justify" tkey="cat.vss.desc2"></p>
             <br>
             <p class="res" tkey="cat.vss.r"></p>
+
+
+            <table class="table">
+              <thead class="bg-primary">
+                <tr>
+                  <th scope="col">Competition</th>
+                  <th scope="col">2021</th>
+                  <th scope="col">2020</th>
+                  <th scope="col">2019</th>
+                  <th scope="col">2018</th>
+                  <th scope="col">2017</th>
+                  <th scope="col">2016</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">LARC</th>
+                  <td><span class="badge badge-pill badge-warning" tkey="cat.vss.larc21"></span></td>
+                  <td tkey="cat.vss.larc20"></td>
+                  <td tkey="cat.vss.larc19"></td>
+                  <td tkey="cat.vss.larc18"></td>
+                  <td tkey="cat.vss.larc17"></td>
+                  <td tkey="cat.vss.larc16"></td>
+                </tr>
+                <tr>
+                  <th scope="row">IRONCup</th>
+                  <td tkey="cat.vss.iron21"></td>
+                  <td tkey="cat.vss.iron20"></td>
+                  <td tkey="cat.vss.iron19"></td>
+                  <td tkey="cat.vss.iron18"></td>
+                  <td>N/A</td>
+                  <td>N/A</td>
+                </tr>
+              </tbody>
+            </table>
+
             <p class="text-justify" tkey="cat.vss.results"></p>
             <p class="text-justify" tkey="cat.vss.results8"></p>
             <p class="text-justify" tkey="cat.vss.results0"></p>
